kubernetes/sonarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonarr.tehmatt.com`)
    kind: Rule
    services:
    - name: sonarr
      port: 8989
    middlewares:
    - name: default-headers
  tls:
    secretName: tehmatt-tls
